--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^19.2.0",
     "recharts": "^3.4.1",
     "html2canvas": "^1.4.1",
-    "@supabase/supabase-js": "^2.83.0"
+    "@supabase/supabase-js": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
